examples/test/testpolicy11242.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11242
  namespace: namespace223
spec:
  podSelector:
    matchLabels:
      key28: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value44
          key47: value43
      podSelector:
        matchLabels:
          key30: value23
          key34: value7
